--- a/contact me.html
+++ b/contact me.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <h1>My Contact Details</h1>
-    <p>My Phone Number: 05456728223</p>
+    <p>My Phone Number: NO NUMBER</p>
     <p>MY Linkedin Account: <a href="https://www.linkedin.com">Linkedin</a></p>
-    <form action="mailto:me.kucukbiyikfatih51@gmail.com" method="post" enctype="text/plain">
+    <form action="index.html" method="post" enctype="text/plain">
       <label>Your Name:</label><br>
       <input type="text" name="yourName" value=""><br>
       <label>Your Email:</label><br>
